assets/css/dark.css
html,
body,
small,
input,
textarea,
h1,
h2,
h3,
h4,
h5,
.pure-g,
.pure-menu-heading,
.video-card-row {
  font-family: BlinkMacSystemFont, -apple-system, Open Sans, segoe ui, Roboto,
    Oxygen, Ubuntu, Cantarell, fira sans, droid sans, helvetica neue, Helvetica,
    Arial, sans-serif !important;
}
#contents {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
.deleted {
  background-color: rgb(255, 0, 0, 0.5);
}
.channel-profile > * {
  font-size: 1.17em;
  font-weight: 700;
  vertical-align: middle;
}
.channel-profile > img {
  margin: 0 7px 0 0;
  width: 48px;
  height: auto;
  border-radius: 50%;
  border: 2px solid rgba(255,255,255,.4);
}
body a.channel-owner {
  padding: 1px 6px;
  color: #fff;
  border-radius: 9px;
  background-color: #008bec;
}
.creator-heart-container {
  margin: 0 -7px -4px 0;
  padding: 0 7px 6px 0;
  display: inline-block;
}
.creator-heart {
  position: relative;
  width: 16px;
  height: 16px;
  border: 2px;
}
.creator-heart-background-hearted {
  width: 16px;
  height: 16px;
  padding: 0;
  position: relative;
}
.creator-heart-small-hearted {
  position: absolute;
  right: -7px;
  bottom: -4px;
}
.creator-heart-small-container {
  position: relative;
  width: 13px;
  height: 13px;
  color: red;
}
.feed-menu {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.feed-menu-item {
  text-align: center;
}
@media screen and (max-width: 640px) {
  .feed-menu-item {
    flex: 0 0 40%;
  }
}
.h-box {
  padding-left: 1em;
  padding-right: 1em;
}
.v-box {
  padding-top: 1em;
  padding-bottom: 1em;
}
div {
  overflow-wrap: break-word;
  word-wrap: break-word;
}
.loading {
  display: inline-block;
  animation: spin 2s linear infinite;
}
.playlist-restricted {
  height: 20em;
  padding-right: 10px;
}
body a.pure-button {
  color: rgba(0, 0, 0, 0.8);
}
button.pure-button-primary,
body a.pure-button-primary,
.channel-owner:hover {
  background-color: #a0a0a0;
  color: #272323;
}
button.pure-button-primary:hover,
body a.pure-button-primary:hover {
  background-color: #00b6f0;
  color: #fff;
}
div.thumbnail {
  padding: 28.125%;
  position: relative;
  box-sizing: border-box;
}
img.thumbnail {
  padding: 4px;
  width: calc(100% - 8px);
  height: calc(100% - 8px);
  position: absolute;
  left: 0;
  top: 0;
  box-shadow: inset 0 0 0 1px #000, inset 0 0 0 3px #aaa;
  object-fit: cover;
  filter: saturate(.5);
  transition: ease filter .15s;
}
img.thumbnail:hover {
  filter: saturate(1);
  transition: ease filter .15s;
}
.length {
  padding: 2px 8px;
  position: absolute;
  right: 0.25em;
  bottom: -0.75em;
  z-index: 100;
  background-color: rgba(35, 35, 35, 0.75);
  color: #fff;
  font-size: 16px;
}
.watched {
  z-index: 100;
  position: absolute;
  background-color: rgba(35, 35, 35, 0.75);
  color: #fff;
  border-radius: 2px;
  padding: 4px 8px;
  font-size: 16px;
  left: 0.2em;
  top: -0.7em;
}
.navbar {
  margin: 1em 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.navbar > div {
  flex: 1;
}
.searchbar {
  flex-grow: 2;
}
.navbar a {
  padding: 0;
}
.navbar .index-link {
  font-weight: 700;
  display: inline;
}
.searchbar .pure-form input[type="search"] {
  margin-bottom: 1px;
  padding: initial 0;
  max-width: 600px;
  border: none;
  border-bottom: 1px solid #ccc;
  border-radius: 0;
  box-shadow: 0 0;
  -webkit-appearance: none;
}
input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance: none;
  height: 14px;
  width: 14px;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
  background-size: 14px;
}
.searchbar .pure-form fieldset {
  padding: 0;
}
.searchbar .pure-form input[type="search"]:focus {
  margin-bottom: 0;
  border-bottom: 2px solid #aaa;
}
.user-field {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}
.user-field div {
  width: initial;
}
.user-field div:not(:last-child) {
  margin-right: 1em;
}
@media only screen and (max-aspect-ratio: 16/9) {
  .player-dimensions.vjs-fluid {
    padding-top: 46.86% !important;
  }
  #player-container {
    padding-bottom: 46.86% !important;
  }
}
@media screen and (max-width: 767px) {
  .navbar {
    flex-direction: column;
  }
  .navbar > div {
    display: flex;
    justify-content: center;
  }
  .navbar > div:not(:last-child) {
    margin-bottom: 1em;
  }
  .navbar > .searchbar > form {
    width: 60%;
  }
  h1 {
    font-size: 1.25em;
    margin: 0.42em 0;
  }
}
@media screen and (max-width: 320px) {
  .navbar > .searchbar > form {
    width: 100%;
    margin: 0 1em;
  }
}
.video-card-row {
  margin: 15px 0;
  border-top: 1px solid rgba(255,255,255,.1);
}
.video-card-row .video-data + .video-data {
  font-weight: 600;
}
.flexible {
  display: flex;
}
.flex-left {
  flex: 1 1 100%;
  flex-wrap: wrap;
}
.flex-right {
  flex: 1 0 max-content;
  flex-wrap: nowrap;
}
p.channel-name {
  margin: 0;
}
p.video-data {
  margin: 0;
  font-weight: 700;
  font-size: 80%;
}
footer {
  color: #919191;
  margin-top: auto;
  padding: 1.5em 0;
  text-align: center;
  max-height: 30vh;
}
footer a {
  color: #919191 !important;
  text-decoration: underline;
}
footer span {
  margin: 4px 0;
  display: block;
}
@keyframes spin {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}
fieldset > select,
span > select {
  color: #313133;
}
.pure-control-group label {
  word-wrap: normal;
}
a:hover,
a:active,
summary:hover {
  color: #ca7740;
}
a {
  color: #c19f9f;
  text-decoration: none;
  font-weight: 600;
}
body {
  background-color: #272323;
  color: #f0f0f0;
}
.pure-form legend {
  color: #f0f0f0;
}
.pure-menu-heading {
  color: #f0f0f0;
}
input,
select,
textarea {
  color: #272323;
}
.pure-form input[type="file"] {
  color: #f0f0f0;
}
.searchbar input {
  background-color: inherit;
  color: inherit;
}
.no-theme a:hover,
.no-theme a:active {
  color: #00b6f0;
}
.no-theme a {
  color: #a0a0a0;
  text-decoration: none;
}
body.no-theme {
  background-color: #272323;
  color: #f0f0f0;
}
.no-theme .pure-form legend {
  color: #f0f0f0;
}
.no-theme .pure-menu-heading {
  color: #f0f0f0;
}
.no-theme input,
.no-theme select,
.no-theme textarea {
  color: #272323;
}
.no-theme .pure-form input[type="file"] {
  color: #f0f0f0;
}
.no-theme .searchbar input {
  background-color: inherit;
  color: inherit;
}
#filters {
  display: inline;
  margin-top: 15px;
}
#filters > div {
  display: inline-block;
}
#filters > summary {
  display: block;
  margin-bottom: 15px;
}
#filters > summary::before {
  content: "[ + ]";
  font-size: 1.5em;
}
#filters[open] > summary::before {
  content: "[ - ]";
  font-size: 1.5em;
}
hr {
  margin: 10px 0;
  border: none;
  height: 1px;
  background: linear-gradient(to right, rgba(0,0,0,0), rgba(255,255,255,.1), rgba(0,0,0,0));
}
#descexpansionbutton {
  display: none;
}
#descexpansionbutton ~ div {
  overflow: hidden;
  height: 8.3em;
}
#descexpansionbutton:checked ~ div {
  overflow: unset;
  height: 100%;
}
#descexpansionbutton ~ label {
  order: 1;
  margin-top: 20px;
}
h1,
h2,
h3,
h4,
h5,
p,
#descriptionWrapper,
#description-box {
  unicode-bidi: plaintext;
  text-align: start;
}
#descriptionWrapper {
  max-width: 600px;
}
#logo > h1 {
  text-align: center;
}
.h-box h3 {
  margin-bottom: 0;
  padding: 2px 10px 6px;
  text-align: center;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 999;
  border-top: 1px solid rgba(255,255,255,.1);
  background: #1b1b1b;
}
.h-box h3 small {
  display: inline-block;
  line-height: 1.3;
  font-weight: 600 !important;
  font-size: 65%;
}
footer {
  display: none;
}
#logo h1.pure-menu-heading {
  margin: -5% 0 5%;
  width: 100%;
  font-size: 0 !important;
}
#logo h1.pure-menu-heading::after {
  width: 100%;
  height: 120px;
  display: inline-block;
  content: "";
  background: url(../logo.svg) no-repeat center center / 36%;
}
@media screen and (max-width: 1000px) {
  #logo h1.pure-menu-heading::after {
    margin: -30px 0;
    background-size: auto 60%;
  }
}
a,
u {
  text-decoration: none !important;
}
input[type="search"] {
  text-align: center;
}
input[type="search"]:focus::placeholder {
  color: transparent;
}
.feed-menu::after {
  margin: 20px 0;
  width: 100%;
  height: 1px;
  display: inline-block;
  background: linear-gradient(to right,rgba(0, 0, 0, 0),rgba(255,255,255,.1),rgba(0, 0, 0, 0));
  content: "";
}
.pure-menu-heading {
  font-weight: 700;
  letter-spacing: 0.05em;
}
.pure-g {
  margin-bottom: 20px;
}
.pure-g.h-box {
  margin: -7px 0 -14px;
}
.pure-g.navbar.h-box {
  margin: 0;
}
.pure-u-1.pure-md-1-3 {
  margin: 0 auto;
  width: auto;
  display: inline-block;
  text-align: center;
}
.imagethumb {
  position: relative;
  font-size: 90%;
}
.imagethumb p:not(.length)[dir="auto"] {
  margin: 5px 0 -10px;
  line-height: 1.25;
  font-size: 85%;
  font-weight: 600;
}
.imagethumb .icon-buttons {
  padding: 3px 4px;
  display: inline-block;
  position: absolute;
  top: 4px;
  left: 18px;
  background: rgba(35, 35, 35, 0.75);
}
.imagethumb .icon-buttons .icon {
  margin: -1px 1px 0;
  padding: 0 2px;
  display: inline-block;
  font-size: 120%;
}
#hosting a {
  font-weight: 700;
}
#toggle_theme {
  display: none;
}
.imagethumb .vid_title {
  margin-bottom: -9px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.pure-g.h-box.pagenav {
  margin: -12px -9px 14px;
}
#filters + hr + .pagenav {
  display: none;
}
@media screen and (min-width: 1200px) {
  .pure-u-md-1-4,
  .pure-u-md-6-24 {
    border: 1px solid rgba(0,0,0,.4);
    box-shadow: inset 0 0 0 1px rgba(255,255,255,.1);
    background: rgba(0,0,0,.15);
  }
  .flex-left.yt_uploaded {
    position: absolute;
    right: 15px;
    bottom: 15px;
  }
  .flex-right.yt_views {
    padding: 0 8px 16px 9px;
    position: absolute;
    top: 3px;
    right: 18px;
    background: rgba(35,35,35,.75);
  }
  .video-card-row + .video-card-row {
    margin-bottom: -6px;
    border-top: none;
  }
  .yt_channel {
    margin-top: 2px;
  }
  .imagethumb .yt_author p.channel-name {
    padding-left: 15px;
    background: url(/author.svg) no-repeat left center / 12px;
  }
  .imagethumb .yt_uploaded p {
    padding-left: 16px;
    background: url(/clock.svg) no-repeat left center / 12px;
  }
}

